[Prarthana]:refactor swagger and routes
