# app/routes/route.js
@@ -10,8 +10,8 @@ app.post('/register', userController.register);
 app.post('/login',userController.login);
 
 //CRUD api for employee
-app.post('',helper.verifyToken,employee.createEmployee);
-app.get('',helper.verifyToken,employee.getAllEmployees);
+app.post('/create',helper.verifyToken,employee.createEmployee);
+app.get('/getall',helper.verifyToken,employee.getAllEmployees);
 app.get('/:empId',helper.verifyToken,employee.getOne);
 app.put('/:empId',helper.verifyToken,employee.updateEmployee);
 app.delete('/:empId', helper.verifyToken, employee.removeEmployee);
